--- a/index.html
+++ b/index.html
@@ -203,28 +203,35 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                 <tr>
                                 <td>
 <h3 align="center"?>
-Click below for photos of the <i>2017 Pacific Islander Festival</i> events that took place last May<br>
+Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
 </h3>
-<a href= "Event_Pages/pacificfest2017/poly1.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly1.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly2.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly2.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly3.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly3.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly4.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly4.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly5.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly5.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly6.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly6.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly7.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly7.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly8.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly8.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly9.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly9.jpeg" /></a>
-<a href= "Event_Pages/pacificfest2017/poly-proposal.jpeg" title="A Proposal happens at Pacific Islander Festival!" rel="lightbox[pacific]">
-<img src="Event_Pages/pacificfest2017/thumbs/poly-proposal.jpeg" /></a>
+<a href= "images/2017yearInReview/FOHP-2017-02.jpg" 
+ title="Half Pint in Hart Hall!" rel="lightbox[2017]">
+<img src="images/2017yearInReview/FOHP-2017-01.jpg"/></a>
+<a href= "images/2017yearInReview/FOHP-2017-03.jpg" 
+ title="Cowboy Festival in Hart Mansion:  Wyatt Earp historians Garner Palenske &amp; Nicholas Cataldo and musician Dave Stamey" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-04.jpg" 
+ title="Pacific Islander Festival" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-05.jpg" 
+ title="Silents Under the Stars 2017" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-06.jpg" 
+ title="Summer Movies in the Park" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-07.jpg" 
+ title="Friends of Hart Park Annual Volunteer Dinner, featuring Joanne Grosch" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-08.jpg" 
+ title="Hart of the West Pow Wow" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-09.jpg" 
+ title="Bow Wows &amp; Meows Pet Fair" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-10.jpg" 
+ title="Thanks to Katie Berndt for her Girl Scout Gold Award Project Bench" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-11.jpg" 
+ title="Thanks to Green Thumb Nursery for the piggy treats!" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-12.jpg" 
+ title="Cowboys &amp; Carols&mdash;Bill Hart's Birthday celebration" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-13.jpg" 
+ title="Sorry to say so long: Lisa Jaserie, Lina Schultz, Norman" rel="lightbox[2017]"/>
+<a href= "images/2017yearInReview/FOHP-2017-14.jpg" 
+ title="New Additions to our Friends:  Tortoises, Alpacas, and two new board members: John Grannis & Tim Murphy" rel="lightbox[2017]"/>
                                 </td>
                                 </tr>
                                 <tr>
@@ -235,54 +242,6 @@ Click below for photos of the <i>2017 Pacific Islander Festival</i> events that 
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
-                                <tr>
-                                <td>
-<h3 align="center"?>
-Click below for photos of the <i>2017 Cowboys Festival</i> events that took place Bill Hart's living room<br>
-<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_00.jpg" title="Dave Stamey" rel="lightbox[cowboyfest]">
-<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_00.jpg" /></a>
-<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_01.jpg" title="Dave Stamey" rel="lightbox[cowboyfest]">
-<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_01.jpg" /></a>
-<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_14.jpg" title="Wyatt Earp historian Nicholas Cataldo" rel="lightbox[cowboyfest]">
-<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_14.jpg" /></a>
-<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_15.jpg" title="Wyatt Earp historians Garner Palenske &amp;  Nicholas Cataldo" rel="lightbox[cowboyfest]">
-<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_15.jpg" /></a>
-<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_16.jpg" title="Wyatt Earp historian Garner Palenske" rel="lightbox[cowboyfest]">
-<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_16.jpg" /></a>
-<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_17.jpg" title="Wyatt Earp historians Garner Palenske &amp;  Nicholas Cataldo" rel="lightbox[cowboyfest]">
-<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_17.jpg" /></a>
-</h3>
-<sm>Photos courtesy of Museum Volunteer Coordinator David Paul</sm>
-                                </td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
-<!--
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                    <h3> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=a.930784956986448.1073741830.171859949545623&type=3">here</a> for photos from Silents Under the Stars 2015!</h3>
-<div align="center">
-<a target="_blank" href="https://www.facebook.com/media/set/?set=a.930784956986448.1073741830.171859949545623&type=3">
-<img align="center" src="Event_Pages/silents/silents2015.jpg"/>
-</a>
-</div>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
--->
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -319,7 +278,7 @@ Click below for photos of the <i>2017 Cowboys Festival</i> events that took plac
                                     </p>
 -->
                                 <h2>2018 Calendar of Events</h2>
-                                <h3>Stay tuned as dates become available</h3>
+                                <h3>Please check back as dates become more solid and details become available</h3>
 <!--
                                 <h3>Click on links as details become available</h3>
 -->
@@ -328,44 +287,136 @@ Click below for photos of the <i>2017 Cowboys Festival</i> events that took plac
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-<!--
                                     <tr>
-                                      <td id="EventDate">Saturday &amp; 
-                                        Sunday, Nov. 25<sup>th</sup>  &amp; 26<sup>th</sup></td>
+                                      <td id="EventDate">
+                                        Thursday&ndash;Sunday, Apr. 19<sup>th</sup>&ndash;22<sup>nd</sup></td>
                                       <td id="Event">
-<a href= "Event_Pages/HartHolidayBoutique2017.png" title="Hart Holiday Boutique" rel="lightbox[boutique]">
-                                      Hart Holiday Boutique &amp; Craft Fair
-</a>
+                                      <a target="_blank" href="http://www.cowboyfestival.org">
+                                      Santa Clarita Cowboy Festival
+                                      <span><img src="images/ExternalLink.png"/></a></span>
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Dec. 2<sup>nd</sup></td>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, 
+                                        May 5<sup>th</sup>&ndash;6<sup>th</sup> 
+                                        10am&ndash;8pm</td>
                                       <td id="Event">
-<a href= "Event_Pages/CowboysAndCarols2017.png" title="Cowboys and Carols" rel="lightbox[carols]">
+                                      Pacific Islander Festival
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, May 19<sup>th</sup>&ndash;20<sup>th</sup>
+                                        10am&ndash;4pm</td>
+                                      <td id="Event">
+                                      Artisan Row Home Arts Show
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Fridays
+                                        June 15<sup>th</sup>,
+                                        June 29<sup>th</sup>,
+                                        July 13<sup>th</sup>,
+                                        Aug. 3<sup>rd</sup>,
+                                        Aug. 17<sup>th</sup>
+                                        &mdash; at Dusk</td>
+                                      <td id="Event">
+                                      Free Movies in the Park
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, June 9<sup>th</sup>&ndash;10<sup>th</sup>
+                                        10am&ndash;4pm</td>
+                                      <td id="Event">
+                                      <a target="_blank" href="http://www.scvquiltguild.org/Quilt_Show.htm">
+                                      SCV Quilt Show
+                                      <span><img src="images/ExternalLink.png"/></a></span>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Sunday, June 24<sup>th</sup>
+                                        6pm</td>
+                                      <td id="Event">
+                                      &ldquo;Saxtravaganza&rdquo; Free Saxophone Chamber Music concert
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday, July 28<sup>th</sup>
+                                        7pm&ndash;9pm</td>
+                                      <td id="Event">
+                                      Country dance event!
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday, Aug. 11<sup>th</sup>
+                                        6pm</td>
+                                      <td id="Event">
+                                      &ldquo;Silents Under the Stars&rdquo;
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, Sep. 9<sup>th</sup>&ndash;10<sup>th</sup>
+                                        10am&ndash;4pm</td>
+                                      <td id="Event">
+                                      High Desert Modular Model Train Show
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, Sep. 29<sup>th</sup>&ndash;30<sup>th</sup>
+                                        10am&ndash;7pm</td>
+                                      <td id="Event">
+                                      Hart of the West Native American
+                                      &ldquo;Pow Wow&rdquo; and Craft Fair
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Sunday, Oct. 7<sup>th</sup>
+                                        11am&ndash;4pm</td>
+                                      <td id="Event">
+                                      &ldquo;Bow Wows &amp; Meows&rdquo; Pet Fair
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, Oct. 13<sup>th</sup>&ndash;14<sup>th</sup>
+                                        </td>
+                                      <td id="Event">
+                                      SCVAA Arts Classic
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday, Nov. 3<sup>rd</sup>
+                                        1pm&ndash;4pm</td>
+                                      <td id="Event">
+                                      SCV Rose Society Rose Show
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, Nov. 17<sup>th</sup>&ndash;18<sup>th</sup>
+                                        10am&ndash;4pm
+                                        </td>
+                                      <td id="Event">
+                                      Hart Holiday Boutique
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Dec. 1<sup>st</sup>
+                                      7pm</td>
+                                      <td id="Event">
                                       Cowboys &amp; Carols
 </a>
                                       </td>
                                     </tr>
--->
-                                    <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
-                                    joining The Friends of Hart Park</a>!</h3>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<h3 align="center">Happy Holidays from the Friends of Hart Park!<br>
-<img src="images/HartWithChristmasTree.png" />
-</h3>
-
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<p align="center">
-<a target="_blank" href="https://www.facebook.com/pg/friendsofhartpark/photos/?tab=album&album_id=1612230545508549">
-Click here <span><img src="images/ExternalLink.png"/></a></span>to see images from 2017's 
-<h2 align="center">Cowboys and Carols</h2></p>
-<a target="_blank" href="https://www.facebook.com/pg/friendsofhartpark/photos/?tab=album&album_id=1612230545508549">
-<img src="Event_Pages/CowboysCarols2017.jpg"/>
-</a>
 <!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -384,6 +435,11 @@ Click here <span><img src="images/ExternalLink.png"/></a></span>to see images fr
                                     </tr>
                                   </tbody>
                                 </table>
+                                    <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
+                                    joining The Friends of Hart Park</a>!</h3>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                       </tbody>
                     </table>
                     <hr>
