Updated Calendar with "final" dates, and added Cowboy Festival info

--- a/index.htm
+++ b/index.htm
@@ -261,28 +261,16 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-<!--
-                            <div><i><b> </b></i>
-                              <div style="text-align: center;">
-                                    <a href="Event_Pages/silents.html">
-                                    <img id="rightside" src="Event_Pages/silents/westernMovie.jpg"/>
-                                    </a>
-                                    <p>
-                                    <h1 align="right">Silents Under the Stars Saturday August 13<sup>th</sup>
-                                    Sold Out!</h1>
-                                    </p>
-                                    <p>
-                                    <h3 align="right">
-                                    <a href="Event_Pages/silents.html">
-                                    Click here </a> for more info!</h3>
-                                    </p>
--->
+                        <a href= "Event_Pages/cowboyfest2018/cowboyFest2018.png" 
+                         title="Cowboy Festival 2018 featuring Jon Chandler &amp; Ernie Martinez" 
+                               rel="lightbox[cowboyFest]">
+                          <img src="Event_Pages/cowboyfest2018/ChandlerCowboyFest.png"/>
+                        </a>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2018 Calendar of Events</h2>
-                                <h3>Please check back as dates become more solid and details become available</h3>
-<!--
                                 <h3>Click on links as details become available</h3>
--->
-
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
@@ -291,9 +279,10 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                       <td id="EventDate">
                                         Thursday&ndash;Sunday, Apr. 19<sup>th</sup>&ndash;22<sup>nd</sup></td>
                                       <td id="Event">
-                                      <a target="_blank" href="http://www.cowboyfestival.org">
+                                      <a target="_blank" href="http://www.cowboyfestival.org/venues/hart-mansion/">
                                       Santa Clarita Cowboy Festival
                                       <span><img src="images/ExternalLink.png"/></a></span>
+                                      Featuring Jon Chandler and Ernie Martinez in the Mansion!
                                       </td>
                                     </tr>
                                     <tr>
@@ -306,29 +295,36 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                       </td>
                                     </tr>
                                     <tr>
+                                      <td id="EventDate">Saturdays
+                                        May 12<sup>th</sup>,
+                                        June 2<sup>nd</sup> &amp;
+                                        June 16<sup>th</sup>
+                                        &mdash; 11am&ndash;2pm</td>
+                                      <td id="Event">
+                                      Free Country Music in the Park
+                                      </td>
+                                    </tr>
+                                    <tr>
                                       <td id="EventDate">
                                         Saturday &amp; Sunday, May 19<sup>th</sup>&ndash;20<sup>th</sup>
                                         10am&ndash;4pm</td>
                                       <td id="Event">
-                                      Artisan Row Home Arts Show
+                                      Artisan Row Home Arts &amp; Crafts Show
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Fridays
-                                        June 15<sup>th</sup>,
-                                        June 29<sup>th</sup>,
-                                        July 13<sup>th</sup>,
-                                        Aug. 3<sup>rd</sup>,
-                                        Aug. 17<sup>th</sup>
-                                        &mdash; at Dusk</td>
+                                      <td id="EventDate">Saturdays
+                                        May 26<sup>th</sup> &amp;
+                                        July 28<sup>th</sup>
+                                        &mdash; 7&ndash;10pm</td>
                                       <td id="Event">
-                                      Free Movies in the Park
+                                      Goin' Country in the Park evening music!
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">
                                         Saturday &amp; Sunday, June 9<sup>th</sup>&ndash;10<sup>th</sup>
-                                        10am&ndash;4pm</td>
+                                        10am&ndash;5pm</td>
                                       <td id="Event">
                                       <a target="_blank" href="http://www.scvquiltguild.org/Quilt_Show.htm">
                                       SCV Quilt Show
@@ -344,11 +340,13 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">
-                                        Saturday, July 28<sup>th</sup>
-                                        7pm&ndash;9pm</td>
+                                      <td id="EventDate">Fridays
+                                        July 13<sup>th</sup>,
+                                        Aug. 3<sup>rd</sup>,
+                                        Aug. 17<sup>th</sup>
+                                        &mdash; at Dusk</td>
                                       <td id="Event">
-                                      Country dance event!
+                                      Free Movies in the Park
                                       </td>
                                     </tr>
                                     <tr>
@@ -361,15 +359,27 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">
-                                        Saturday &amp; Sunday, Sep. 9<sup>th</sup>&ndash;10<sup>th</sup>
+                                        Saturday &amp; Sunday, Sep. 15<sup>th</sup>&ndash;16<sup>th</sup>
                                         10am&ndash;4pm</td>
                                       <td id="Event">
+                                      <a target="_blank" href="http://www.hdmmrc.com/events.php">
                                       High Desert Modular Model Train Show
+                                      <span><img src="images/ExternalLink.png"/></a></span>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">
                                         Saturday &amp; Sunday, Sep. 29<sup>th</sup>&ndash;30<sup>th</sup>
+                                        </td>
+                                      <td id="Event">
+                                      <a target="_blank" href="https://www.santaclaritaartists.org/">
+                                      SCV Artists Association Arts Classic
+                                      <span><img src="images/ExternalLink.png"/></a></span>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, Oct. 6<sup>th</sup>&ndash;7<sup>th</sup>
                                         10am&ndash;7pm</td>
                                       <td id="Event">
                                       Hart of the West Native American
@@ -378,18 +388,19 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">
-                                        Sunday, Oct. 7<sup>th</sup>
+                                        Sunday, Oct. 14<sup>th</sup>
                                         11am&ndash;4pm</td>
                                       <td id="Event">
+                                      <a target="_blank" href="https://www.bowwowsandmeows.org/">
                                       &ldquo;Bow Wows &amp; Meows&rdquo; Pet Fair
+                                      <span><img src="images/ExternalLink.png"/></a></span>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">
-                                        Saturday &amp; Sunday, Oct. 13<sup>th</sup>&ndash;14<sup>th</sup>
-                                        </td>
+                                        Saturday Oct. 20<sup>th</sup>
                                       <td id="Event">
-                                      SCVAA Arts Classic
+                                      LA County Sheriffs Relief Association Picnic
                                       </td>
                                     </tr>
                                     <tr>
@@ -397,16 +408,9 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         Saturday, Nov. 3<sup>rd</sup>
                                         1pm&ndash;4pm</td>
                                       <td id="Event">
+                                      25<sup>th</sup> annual 
+                                      <a target="_blank" href="http://www.scvrs.homestead.com/roseshow.html">
                                       SCV Rose Society Rose Show
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Saturday &amp; Sunday, Nov. 17<sup>th</sup>&ndash;18<sup>th</sup>
-                                        10am&ndash;4pm
-                                        </td>
-                                      <td id="Event">
-                                      Hart Holiday Boutique
                                       </td>
                                     </tr>
                                     <tr>
@@ -414,7 +418,16 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                       7pm</td>
                                       <td id="Event">
                                       Cowboys &amp; Carols
-</a>
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                        Saturday &amp; Sunday, Dec. 8<sup>th</sup>&ndash;9<sup>th</sup>
+                                        10am&ndash;4pm
+                                        </td>
+                                      <td id="Event">
+                                      Hart Holiday Boutique
                                       </td>
                                     </tr>
 <!--
@@ -437,9 +450,11 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                 </table>
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3>
+<!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+-->
                       </tbody>
                     </table>
                     <hr>
