--- a/index.html
+++ b/index.html
@@ -309,7 +309,10 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         Saturday &amp; Sunday, May 19<sup>th</sup>&ndash;20<sup>th</sup>
                                         10am&ndash;4pm</td>
                                       <td id="Event">
+                                      <a href= "Event_Pages/Artisan2018.png" 
+                                      title="Artisan Row Home Arts &amp; Crafts Show" rel="lightbox[artisan]">
                                       Artisan Row Home Arts &amp; Crafts Show
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
