--- a/index.html
+++ b/index.html
@@ -261,11 +261,13 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-<!--
+                                      <a href= "Event_Pages/musicInThePark2018-med.png" 
+                                      title="Music in the Park" rel="lightbox[music]">
+                                      <img src="Event_Pages/musicInThePark2018-sm.png"/>
+                                      </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
--->
                                 <h2>2018 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
@@ -288,7 +290,10 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         June 16<sup>th</sup>
                                         &mdash; 11am&ndash;2pm</td>
                                       <td id="Event">
+                                      <a href= "Event_Pages/musicInThePark2018-med.png" 
+                                      title="Music in the Park" rel="lightbox[music]">
                                       Free Country Music in the Park
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
