Added recently received Pacific Islander Festival flyer.

--- a/index.htm
+++ b/index.htm
@@ -277,10 +277,15 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     <tr>
                                       <td id="EventDate">
                                         Saturday &amp; Sunday, 
-                                        May 5<sup>th</sup>&ndash;6<sup>th</sup> 
-                                        10am&ndash;8pm</td>
+                                        May 5<sup>th</sup>
+                                        10am&ndash;6pm&mdash;
+                                        May 6<sup>th</sup> 
+                                        10am&ndash;4pm</td>
                                       <td id="Event">
+                                      <a href= "Event_Pages/pacific2018.png" 
+                                      title="Pacific Islander Festival" rel="lightbox[pacific]">
                                       Pacific Islander Festival
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
