Adding Going Country and Hart Flyer

--- a/index.htm
+++ b/index.htm
@@ -275,20 +275,6 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">
-                                        Saturday &amp; Sunday, 
-                                        May 5<sup>th</sup>
-                                        10am&ndash;6pm&mdash;
-                                        May 6<sup>th</sup> 
-                                        10am&ndash;4pm</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/pacific2018.png" 
-                                      title="Pacific Islander Festival" rel="lightbox[pacific]">
-                                      Pacific Islander Festival
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturdays
                                         May 12<sup>th</sup>,
                                         June 2<sup>nd</sup> &amp;
@@ -318,7 +304,10 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         July 28<sup>th</sup>
                                         &mdash; 7&ndash;10pm</td>
                                       <td id="Event">
-                                      Goin' Country in the Park evening music!
+                                      <a href= "Event_Pages/GoingCountryAtTheHart.jpg" 
+                                      title="Going Country at Hart" rel="lightbox[music]">
+                                      Goin' Country at Hart live music!
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
